# budget-tool

./: .emacs  .gitignore  Cargo.toml  README.md  docker-compose.yml
bankstatement/: bankstatement.py  fecccu.py  transactions.py
budget-backend-lib/: Cargo.toml
budget-backend-lib/src/: conversions.rs  error.rs  lib.rs  prelude.rs  secret.rs  transaction.rs
budget-backend-lib/src/entities/: accounts.rs  balance_snapshots.rs  initial_balances.rs  line_item_instances.rs  line_items.rs  mod.rs  periodic_budgets.rs  planned_transactions.rs  prelude.rs  real_transactions.rs  sea_orm_active_enums.rs  transactions.rs
budget-cli/: Cargo.toml
budget-cli/src/: balance_snapshot.rs  display.rs  line_item.rs  main.rs  periodic_budget.rs  table.rs  transaction.rs
budget-migrations/: Cargo.toml
budget-migrations/src/: main.rs
budget-models/: .env  Cargo.toml
budget-models/migrations/2022-04-10-184755_create_accounts/: down.sql  up.sql
budget-models/src/: balance_estimator.rs  balance_tracker.rs  budget_tracker.rs  calculation.rs  display.rs  entities.rs  lib.rs  models.rs  money.rs  policy.rs  total.rs  transaction_breakdown.rs
budget-models/src/model/: accounts.rs  budget_items.rs  categories.rs  initial_balances.rs  transactions.rs
budget-models/src/models/: account.rs  account_type.rs  budget_item.rs  categories.rs  initial_balance.rs  one_time_budget.rs  periodic_budget.rs  periodic_budget_summary.rs  tag.rs  transaction.rs  transaction_type.rs
budget-service/: .gitignore  Cargo.toml  docker-compose.yml
budget-service/migrations/: 20220629220930_initial_release.down.sql  20220629220930_initial_release.sql  20220629220930_initial_release.up.sql
budget-service/migrations/2022-04-10-184755_create_accounts/: down.sql
budget-service/migrations/2022-04-10-184755_initial_release/: up.sql
budget-service/src/: conversions.rs  endpoints.rs  entities.rs  main.rs  secret.rs
budget-service/src/endpoints/: accounts.rs  initial_balances.rs  periodic_budgets.rs  transactions.rs
budget-service/src/entities/: accounts.rs  budget_items.rs  categories.rs  initial_balances.rs  one_time_budgets.rs  periodic_budgets.rs  prelude.rs  sea_orm_active_enums.rs  tags.rs  transactions.rs
budget-service/src/model/: initial_balances.rs  mod.rs  one_time_budgets.rs  periodic_budgets.rs  sea_orm_active_enums.rs
chart-js/: Cargo.toml
chart-js/src/: lib.rs
database/: docker-compose.yml
docs/: Import.md  models.pum
frontend/: Cargo.toml  README.md  index.html  main.js  package-lock.json  style.scss
frontend-staging/: .gitignore
frontend-staging/chart-js/: Cargo.toml
frontend-staging/chart-js/src/: lib.rs
frontend-staging/frontend-staging/: .gitignore  Cargo.toml  index.html  style.scss
frontend-staging/frontend-staging/src/: main.rs  navigation.rs  performance.rs
frontend-staging/frontend-staging/src/performance/: account_balance.rs  spending.rs
frontend-staging/models/: Cargo.toml
frontend-staging/models/src/: lib.rs
frontend-staging/yew-roots/: Cargo.toml
frontend-staging/yew-roots-macros/src/: lib.rs
frontend-staging/yew-roots/src/: chart.rs  fields.rs  lib.rs
frontend-staging/yew-velcro/: Cargo.toml
frontend-staging/yew-velcro-macros/: Cargo.toml
frontend-staging/yew-velcro-macros/src/: lib.rs
frontend-staging/yew-velcro/src/: fields.rs  lib.rs  table.rs
frontend/src/: app.rs  balance_synchronizer.rs  budgetizer.rs  fetch.rs  forms.rs  lib.rs  main.rs  navigation.rs  network.rs  pages.rs  performance.rs  render.rs  view.rs
frontend/src/forms/: select.rs  text.rs
frontend/src/pages/: create.rs  not_found.rs  periodic_budget.rs  transactions.rs
frontend/src/pages/create/: transaction.rs
frontend/src/pages/periodic_budget/: account.rs  budget_item.rs  data.rs  presenter.rs  view.rs
frontend/src/pages/transactions/: data.rs  transactions.rs  view.rs
frontend/src/performance/: account_balance.rs  spending.rs
migrations/: 20220629220930_initial_release.down.sql  20220629220930_initial_release.up.sql
models/: Cargo.toml
models/migrations/2022-04-10-184755_create_accounts/: down.sql  up.sql
models/src/: entities.rs  lib.rs  models.rs  serde.rs
service/: Cargo.toml
service/src/: main.rs
table-iter/: Cargo.toml
table-iter-macros/: Cargo.toml
table-iter-macros/src/: lib.rs
table-iter/src/: display.rs  fields.rs  lib.rs  prelude.rs
tools/bankstatement/: README.md  bankstatement.py  fecccu.py
tools/bankstatement/docs/: process.plantuml
tools/budget-cli/: Cargo.toml
tools/budget-cli/src/: line_item.rs  line_item_instance.rs  main.rs  periodic_budget.rs  table.rs  transaction.rs
tools/budget-import/: Cargo.toml
tools/budget-import/src/: main.rs
tools/budget-migrations/: Cargo.toml
tools/budget-migrations/src/: main.rs
yew-roots/: Cargo.toml
yew-roots-macros/: Cargo.toml
yew-roots-macros/src/: lib.rs
yew-roots/src/: chart.rs  lib.rs  prelude.rs  table.rs
