[package]
name = "budget-backend-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
axum = "0.5.17"
budget-models = { path = "../budget-models" }
sea-orm = { version = "0.10.2", features = ["sqlx-postgres", "chrono", "runtime-tokio-native-tls"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
