[package]
name = "budget-models"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.5", features = ["chrono"], optional = true }
strum = "0.24"
strum_macros = "0.24"

[features]
sqlx = ["dep:sqlx"]
