[package]
name = "budget-models"
version = "0.2.0"
edition = "2021"

[dependencies]
cfg-if = "1.0.0"
chrono = { version = "0.4.23", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
strum = "0.24"
strum_macros = "0.24"
table-iter = { path = "../table-iter" }

[features]
business-logic = []
