[package]
name = "budget-service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
axum = "0.5.17"
budget-models = { path = "../budget-models" }
budget-backend-lib = { path = "../budget-backend-lib" }
clap = { version = "4.0.25", features = ["derive"] }
sea-orm = { version = "0.10.3", features = ["sqlx-postgres", "runtime-tokio-native-tls", "chrono"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_yaml = "0.9.14"
tokio = { version = "1.21.2", features = ["full"] }
tower-http = { version = "0.3.4", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[dependencies.openssl-sys]
version = "0.9.74"
features = ["vendored"]
