[package]
name = "budget-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew/" }
budget-models = { path = "../models" }
wasm-logger = "0.2"
log = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Request", "Window", "HtmlSelectElement"] }
wasm-bindgen = { version = "0.2" }
wasm-bindgen-futures = { version = "0.4" }
serde = { version = "1.0" }
console_error_panic_hook = "0.1"

[patch.crates-io]
chrono = { git = "https://github.com/chronotope/chrono" }
