[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
chart-js = { path = "../chart-js" }
strum = "0.24.1"
strum_macros = "0.24.3"
table-iter = { path = "../table-iter" }
wasm-bindgen = "0.2.83"
web-sys = { version = "0.3.60", features = ["HtmlSelectElement"] }
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-roots = { path = "../yew-roots", features = ["chart", "table"] }
yew-router = { git = "https://github.com/yewstack/yew/" }
