[package]
name = "budget-models"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.5.1"
tokio = { version = "1.17", features = ["full"] }
clap = { version = "3.1.8", features = ["derive"] }
diesel = { version = "1.4.4", features = ["postgres", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
diesel-derive-enum = { version = "1.1.2", features = ["postgres"] }
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
