[package]
name = "budget-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.1"
tokio = { version = "1.17", features = ["full"] }
diesel = { version = "1.4.4", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
budget-models = { path = "../models" }
tower-http = { version = "0.2", features = ["trace"] }
tracing-subscriber = "0.3"
tracing = "0.1"
