[package]
name = "budget-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.5.1"
tokio = { version = "1.17", features = ["full"] }
dotenv = "0.15.0"
budget-models = { path = "../models" }
tower-http = { version = "0.2", features = ["trace"] }
tracing-subscriber = "0.3"
tracing = "0.1"
