[package]
name = "yew-roots"
authors = ["Ethan D. Twardy <ethan.twardy@gmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
chart-js = { path = "../chart-js", optional = true }
serde-wasm-bindgen = "0.4.5"
table-iter = { path = "../table-iter", optional = true }
wasm-bindgen = "0.2.83"
web-sys = { version = "0.3.60", features = ["HtmlCanvasElement"] }
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }

[features]
chart = ["dep:chart-js"]
table = ["dep:table-iter"]
