[package]
name = "frontend-staging"
version = "0.1.0"
edition = "2021"

[dependencies]
models = { path = "../models" }
yew-roots = { path = "../yew-roots" }
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew/" }
wasm-bindgen = "0.2.83"
serde = { version = "1.0.145", features = ["derive"] }
web-sys = { version = "0.3.60", features = ["HtmlCanvasElement"] }
serde-wasm-bindgen = "0.4.5"
strum = "0.24.1"
strum_macros = "0.24.3"
