[package]
name = "frontend-staging"
version = "0.1.0"
edition = "2021"

[dependencies]
chart-js = { path = "../chart-js" }
models = { path = "../models" }
serde-wasm-bindgen = "0.4.5"
strum = "0.24.1"
strum_macros = "0.24.3"
wasm-bindgen = "0.2.83"
web-sys = { version = "0.3.60", features = ["HtmlCanvasElement"] }
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-roots = { path = "../yew-roots" }
yew-router = { git = "https://github.com/yewstack/yew/" }
