[package]
name = "frontend-staging"
version = "0.1.0"
edition = "2021"

[dependencies]
chart-js = { path = "../chart-js" }
models = { path = "../models" }
strum = "0.24.1"
strum_macros = "0.24.3"
wasm-bindgen = "0.2.83"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-roots = { path = "../yew-roots", features = ["chart"] }
yew-router = { git = "https://github.com/yewstack/yew/" }
