[package]
name = "budget-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.65"
budget-backend-lib = { path = "../../budget-backend-lib" }
budget-models = { path = "../../budget-models" }
clap = { version = "3.2.22", features = ["derive"] }
tokio = { version = "1.21.1", features = ["full"] }
