[package]
name = "budget-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
budget-backend-lib = { path = "../../budget-backend-lib" }
budget-models = { path = "../../budget-models" }
clap = { version = "4.0.22", features = ["derive"] }
futures = "0.3.25"
sea-orm = { version = "0.10.2", features = ["sqlx-postgres", "runtime-tokio-native-tls", "chrono"] }
tokio = { version = "1.21.2", features = ["full"] }
