[package]
name = "budget-import"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.65"
budget-models = { path = "../../budget-models" }
clap = { version = "3.2.22", features = ["derive"] }
http = "0.2.8"
reqwest = "0.11.12"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.21.1", features = ["full"] }
